--- a/celebration.html
+++ b/celebration.html
@@ -339,7 +339,7 @@
 </style>
 </head>
 <body>
-  <audio id="birthdaySong" src="songs\happy-birthday-314197.mp3" loop></audio>
+  <audio id="birthdaySong" src="happy-birthday-314197.mp3" loop></audio>
 
 
 <div id="overlay">
@@ -459,3 +459,4 @@ let fade = setInterval(() => {
 
 </body>
 </html>
+
