--- a/memories.html
+++ b/memories.html
@@ -364,9 +364,9 @@
   <div class="photo-roll">
   <div class="roll-track">
     <!-- Repeat photos twice for smooth looping -->
-    <div class="image-container"><img src="images\PHOT0_1.jpg" alt="Memory 1">
+    <div class="image-container"><img src="PHOT0_1.jpg" alt="Memory 1">
     <div class="caption">WHERE IT ALL STARTED</div></div>
-    <div class="image-container"><img src="E:\birthday\images\PHOT0_2.jpg" alt="Memory 2">
+    <div class="image-container"><img src="PHOT0_2.jpg" alt="Memory 2">
     <div class="caption">The Brightest Smile</div></div>
     <div class="image-container"><img src="images\PHOT0_3.jpg" alt="Memory 3"></div>
     <div class="image-container"><img src="images\P.jpg" alt="Memory 4"></div>
@@ -677,5 +677,6 @@ function openDiary() {
 
 </body>
 </html>
+
 
 
