--- a/memories.html
+++ b/memories.html
@@ -335,7 +335,7 @@
 </head>
 <body>
    <audio id="bg-music" loop>
-  <source src="songs/song2.mp3" type="audio/mpeg">
+  <source src="song2.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
 
@@ -677,3 +677,4 @@ function openDiary() {
 
 </body>
 </html>
+
