--- a/celebration.html
+++ b/celebration.html
@@ -8,7 +8,7 @@
   body {
     margin: 0;
     height: 100vh;
-    background: url("images/book_cover.jpg");
+    background: url("book_cover.jpg");
     display: flex;
     justify-content: center;
     align-items: center;
@@ -459,5 +459,6 @@ let fade = setInterval(() => {
 
 </body>
 </html>
+
 
 
